# limit-listen-rest

./: .env.sample  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: managers.py  models.py
users/migrations/: 0001_initial.py
