[tool.poetry]
name = "limit-listen-rest"
version = "0.1.0"
description = ""
authors = ["sakrko3 <saikrishnak930@gmail.com>"]
readme = "README.md"
packages = [{include = "limit_listen_rest"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
